fix: bug when moved element outside canvas
Added constraint if element is moved outside the canvas

Also, fixed that element clipped when moved close to the edge.
The element clipped because it was using last position
and not current position.
Change canvas to full width so it doesn't break dragging elmnt on edge

--- a/src/app/home/canvas/canvas.component.scss
+++ b/src/app/home/canvas/canvas.component.scss
@@ -1,4 +1,4 @@
 :host {
   height: 55.5em;
-  width: 64.46%;
+  width: 100%;
 }
